Made swagger-doc for all endpoints
