# models/subcategory_swagger.go
@@ -1,0 +1,8 @@
+package models
+
+// swagger: model SubcategoryResponse
+type SubcategoryResponse struct {
+	ID       uint   `json:"id"`
+	Name     string `json:"name"`
+	Category string `json:"category"`
+}
